src/test/ui/pattern/bindings-after-at/pat-at-same-name-both.stderr
error[E0415]: identifier `a` is bound more than once in this parameter list
  --> $DIR/pat-at-same-name-both.rs:10:14
   |
LL |     fn f(a @ a @ a: ()) {}
   |              ^ used as parameter more than once

error[E0415]: identifier `a` is bound more than once in this parameter list
  --> $DIR/pat-at-same-name-both.rs:10:18
   |
LL |     fn f(a @ a @ a: ()) {}
   |                  ^ used as parameter more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:15:20
   |
LL |         Ok(a @ b @ a)
   |                    ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:17:23
   |
LL |         | Err(a @ b @ a)
   |                       ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:22:13
   |
LL |     let a @ a @ a = ();
   |             ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:22:17
   |
LL |     let a @ a @ a = ();
   |                 ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:25:21
   |
LL |     let ref a @ ref a = ();
   |                     ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:27:29
   |
LL |     let ref mut a @ ref mut a = ();
   |                             ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:30:17
   |
LL |     let a @ (Ok(a) | Err(a)) = Ok(());
   |                 ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:30:26
   |
LL |     let a @ (Ok(a) | Err(a)) = Ok(());
   |                          ^ used in a pattern more than once

warning: the feature `bindings_after_at` is incomplete and may cause the compiler to crash
  --> $DIR/pat-at-same-name-both.rs:4:12
   |
LL | #![feature(bindings_after_at)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

warning: the feature `or_patterns` is incomplete and may cause the compiler to crash
  --> $DIR/pat-at-same-name-both.rs:6:12
   |
LL | #![feature(or_patterns)]
   |            ^^^^^^^^^^^

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0415, E0416.
For more information about an error, try `rustc --explain E0415`.
